fixed features wrap

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -441,6 +441,7 @@
   &__items {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     height: fit-content;
 
     text-align: center;
